# zynaxia-framework-

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml  ci.yml
docs/: 00_FRAMEWORK_MASTER.md  01_INVARIANTS_OVERVIEW.md  02_TESTING_STRATEGY.md  03_LOTS_OVERVIEW.md  04_CONTRIBUTION.md  CONTEXTE_SESSION.md
docs/invariants/: INV_API_COMPATIBILITY.md  INV_DECOM_DECOMMISSIONING.md  INV_DEPL_DEPLOYMENT.md  INV_HEALTH_CHECKS.md  INV_INCID_INCIDENT.md  INV_LIC_LICENSING.md  INV_LOG_LOGGING.md  INV_MAINT_MAINTENANCE.md  INV_MIGR_MIGRATION.md  INV_NET_NETWORK.md  INV_OBS_OBSERVABILITY.md  INV_PROV_PROVISIONING.md  INV_RATE_LIMITING.md  INV_RUN_RUNTIME.md  INV_TIME_SYNC.md
fixtures/configs/: invalid_wildcard.yaml  valid_minimal.yaml
scripts/: migrate_secrets_to_vault.sh  reset_test_db.py  rotate_db_credentials.sh  setup_test_db.sh
src/audit/: TODO_BLOCKCHAIN.md  __init__.py  audit_emitter.py  blockchain_anchor.py  interfaces.py
src/auth/: __init__.py  interfaces.py  jwt_validator.py  permission_checker.py  session_manager.py
src/core/: config_loader.py  config_validator.py  crypto_provider.py  interfaces.py
src/deployment/: __init__.py  config_deployer.py  deployment_constraints.py  deployment_orchestrator.py  image_verifier.py  interfaces.py
src/ha/: __init__.py  config_sync_service.py  degraded_mode_controller.py  failover_manager.py  health_monitor.py  interfaces.py
src/incident/: __init__.py  account_locker.py  breach_handler.py  interfaces.py  intrusion_detector.py  post_incident.py
src/invariants/: rules.py
src/isolation/: interfaces.py  isolation_validator.py  rls_engine.py  tenant_context.py
src/licensing/: __init__.py  interfaces.py  kill_switch_controller.py  license_alert_service.py  license_cache.py  license_manager.py  module_gate.py
src/logging/: __init__.py  interfaces.py  sensitive_masker.py  (+1 more)
tests/: conftest.py
(+58 files in other folders)
