[project]
name = "zynaxia-framework"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["F401"]  # Ignore unused imports (on les gère manuellement)

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # Ignore unused variables dans tests
"__init__.py" = ["F401"]  # Ignore unused imports dans __init__

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
